--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.7",
     "web-vitals": "^2.1.4",
     "webpack-dev-server": "^4.15.1"
