--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.2",
     "react-slick": "^0.30.2",
